idea/testData/checkerWithErrorTypes/full/Properties.jet
 var x : Int = 1 + x
   get() : Int = 1
   set(<!REF_SETTER_PARAMETER!>ref<!> value : <!WRONG_SETTER_PARAMETER_TYPE!>Long<!>) {
      $x = value.int
      $x = <!TYPE_MISMATCH!>1.lng<!>
    }

 val xx : Int = <!PROPERTY_INITIALIZER_NO_BACKING_FIELD!>1 + x<!>
   get() : Int = 1
   <!VAL_WITH_SETTER!>set(value : Long) {}<!>

  val p : Int = <!PROPERTY_INITIALIZER_NO_BACKING_FIELD!>1<!>
    get() = 1

class Test() {
    var a : Int = 111
    var b : Int get() = <!UNRESOLVED_REFERENCE!>$a<!>; set(x) {a = x; <!UNRESOLVED_REFERENCE!>$a<!> = x}

   this(i : Int) : this() {
    <!NO_BACKING_FIELD!>$b<!> = $a
    $a = <!NO_BACKING_FIELD!>$b<!>
    a = <!NO_BACKING_FIELD!>$b<!>
   }
   fun f() {
    <!UNRESOLVED_REFERENCE!>$b<!> = <!UNRESOLVED_REFERENCE!>$a<!>
    a = <!UNRESOLVED_REFERENCE!>$b<!>
   }
   public val <!PUBLIC_MEMBER_SHOULD_SPECIFY_TYPE!>i<!> = 1
}